fix: fix getFileChildren whithout verify project_id match
