# service/gateway/docs/swagger.json
@@ -4371,6 +4371,26 @@
                 }
             }
         },
+        "ChildrenInfo": {
+            "type": "object",
+            "properties": {
+                "creat_time": {
+                    "type": "string"
+                },
+                "creator_name": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "boolean"
+                }
+            }
+        },
         "Comment": {
             "type": "object",
             "properties": {
@@ -4795,7 +4815,7 @@
                 "file_children": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/project.ChildrenInfo"
+                        "$ref": "#/definitions/ChildrenInfo"
                     }
                 }
             }
@@ -5466,23 +5486,6 @@
                     "type": "integer"
                 },
                 "tel": {
-                    "type": "string"
-                }
-            }
-        },
-        "project.ChildrenInfo": {
-            "type": "object",
-            "properties": {
-                "creat_time": {
-                    "type": "string"
-                },
-                "creator_name": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "path": {
                     "type": "string"
                 }
             }
